--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^5.0.6",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.16.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "execa": "^8.0.1",
@@ -20,6 +21,7 @@
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "onetime": "^7.0.0",
+    "pretty-bytes": "^6.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
